--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".view.login.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".view.team.TeamActivity">
-        </activity>
+        <activity android:name=".view.login.LoginActivity"/>
+        <activity android:name=".view.team.TeamActivity"/>
         <activity android:name=".view.menu.MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
